# perpetual

./: .gitignore  ChangeLog.md  LICENSE  Perpetual.cabal  README.md  contributors.txt  package.yaml  perpetual.cabal
Rules/: churchRules.txt  coRules.txt  usRules.txt  usRules1.txt
src/Perpetual/: DateTerm.hs  ScheduleParser.hs  ScheduleTerm.hs
tests/: USARules.hs  tests.hs
